--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,11 +1,65 @@
 body {
   background-color: black;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  font-family: "Helvetica", sans-serif;
+  color: seashell;
+  font-size: 22px;
 }
 
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   border-bottom: 1px solid white;
+  height: 70px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: black;
+  width: 100%;
+}
+
+header .logo img {
+  height: 50px;
+  margin-left: 10px;
+}
+
+header nav {
+  margin-right: 10px;
+}
+
+header nav span {
+  padding-left: 20px;
+}
+
+header nav span a {
+  color: white;
+}
+
+.main {
+  width: 1200px;
+  padding-top: 70px;
+  margin: 0 auto;
+}
+
+.mission {
+  background: url("../images/img-mission-background.jpg") no-repeat center;
+  height: 700px;
+  display: flex;
+  align-items: center;
+}
+
+.mission div {
+  width: 100%;
+  background-color: black;
+  text-align: center;
+}
+
+.mission h2 {
+  margin-top: 10px;
+}
+
+.mission p {
+  margin-bottom: 10px;
 }
