--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -79,12 +79,12 @@ header nav span a {
   display: flex;
   flex-direction: column;
   width: 1000px;
+  margin: 50px 0;
 }
 
 .products .products-header {
   width: 100%;
   text-align: center;
-  margin-top: 50px;
 }
 
 .products .products-header h2 {
@@ -142,3 +142,33 @@ header nav span a {
 }
 
 /* Main -> Locations content */
+
+.locations {
+  background: url("../images/img-locations-background.jpg") no-repeat center;
+  height: 500px;
+  width: 1200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.locations h2 {
+  /*width: 100%;*/
+}
+
+.locations .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.location {
+  height: 300px;
+  width: 300px;
+  margin: 15px 20px;
+  background-color: black;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;  
+}
