Add anchor links to the menu

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,6 +54,13 @@ header nav span a {
   color: seashell;
 }
 
+.anchor {
+  display: block;
+  height: 70px;
+  margin-top: -70px;
+  visibility: hidden;
+}
+
 /* Main content */
 
 .main {
